--- a/rhino.cabal
+++ b/rhino.cabal
@@ -20,11 +20,13 @@ common warnings
 executable rhino
     import:           warnings
     main-is:          Main.hs
-    other-modules:    Engine Args
+    other-modules:    Engine Types
     build-depends:      base ^>=4.17.2.1
                       , parsec
                       , optparse-applicative
                       , directory
                       , filepath
+                      , text
+                      , containers
     hs-source-dirs:   app
     default-language: Haskell2010
