Updated 'engine' module
`Engine` module is now capable to deploy source files

--- a/rhino.cabal
+++ b/rhino.cabal
@@ -28,5 +28,6 @@ executable rhino
                       , filepath
                       , text
                       , containers
+                      , time
     hs-source-dirs:   app
     default-language: Haskell2010
