--- a/rhino.cabal
+++ b/rhino.cabal
@@ -15,7 +15,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall -Wextra -Werror
+    ghc-options: -Wall -Wextra -Werror -O2 -static -threaded
 
 executable rhino
     import:           warnings
