Added target language emitter and fixed various bugs

--- a/rhino.cabal
+++ b/rhino.cabal
@@ -20,7 +20,7 @@ common warnings
 executable rhino
     import:           warnings
     main-is:          Main.hs
-    other-modules:    Engine Types Parser
+    other-modules:    Engine Types Parser Emitter
     build-depends:      base ^>=4.17.2.1
                       , parsec
                       , optparse-applicative
