Added CI and updated documentation

--- a/rhino.cabal
+++ b/rhino.cabal
@@ -21,7 +21,7 @@ executable rhino
     import:           warnings
     main-is:          Main.hs
     other-modules:    Engine Types Parser Emitter
-    build-depends:      base ^>=4.17.2.1
+    build-depends:      base >= 4.7 && <5
                       , parsec
                       , optparse-applicative
                       , directory
