--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Run hlint
         uses: haskell-actions/hlint-run@v2
         with:
-          path: app/
+          path: src/
           fail-on: suggestion
