--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Tests
 on:
   push:
     branches:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -15,5 +15,5 @@ jobs:
       - name: Setup Haskell toolchain(GHC & Cabal)
         uses: haskell-actions/setup@v2
       
-      - name: Build Rhino Compiler
-        run: cabal build
+      - name: Execute tests
+        run: cabal test
