--- a/rhino.cabal
+++ b/rhino.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.0
 name:               rhino
-version:            0.1.0.3
+version:            0.1.0.4
 synopsis:           Markup language for building static websites
 homepage:           https://github.com/ceticamarco/rhino
 license:            MIT
@@ -16,6 +16,7 @@ common warnings
 library rhino-lib
     import:             warnings
     exposed-modules:    Engine Parser Types Emitter
+    other-modules:      Paths_rhino
     hs-source-dirs:     src
     build-depends:       base >= 4.7 && <5
                         , megaparsec
